<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnXiangBani</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SMQRcode">请扫描二维码</string>
    <string name="guijiditu">轨迹地图</string>
    <string name="yuyinjiaoliu">语音交流</string>
    <string name="baobeijiankan">宝贝健康</string>
    <string name="set">设置</string>
    <string name="clearsaid">清除语音缓存</string>
    <string name="guanyubaobei">关于宝贝</string>
    <string name="timeline">历史路径</string>
    <string name="setcenter">设置中心</string>
    <string name="dingshishijian">定时事件设置</string>    
    <string name="daojiatixin">到家提醒设置</string>
    <string name="moshixuanze">模式选择</string>
    <string name="shezhianquanqu">设置安全区</string>
    <string name="shezhiweixianqu">设置危险区</string>
	<string name="xiugaimima">修改密码</string>
	<string name="reset">重置</string>
	<string name="save">保存</string>
	<string name="longclicksaveyuyin">长按输入提示语音</string>
	<string name="shouYuyin">播放设置的提示语音</string>
	<string name="opendingshishijian">开启定时事件提醒</string>
	<string name="setshijian">设置事件时间：</string>
	<string name="setfangxue">设置放学时间：</string>
	<string name="sethome">设置家的位置</string>
	<string name="openhomealarm">开启到家提醒</string>
	<string name="shifouchongfu">是否重复闹钟</string>
	<string name="desc">NULL</string>
	<string name="dianhua">18815292156</string>
	<string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
</resources>