<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="65.32999dip"
    android:layout_alignParentBottom="true"
    android:background="@drawable/tabhosttitlebar_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/guijiditu" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:text="@string/yuyinjiaoliu" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:text="@string/baobeijiankan" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:text="@string/setcenter" />
        </RadioGroup>
    </LinearLayout>

</FrameLayout>